# good-cool-math

./: GoodCoolMath.cabal
GoodCoolMath/: Derivation.hs  Expressions.hs  GoodCoolMath.hs  Shorthand.hs  Simplification.hs
GoodCoolMath/GoodCoolMath/: Derivation.hs  Evaluation.hs  Examples.hs  Expressions.hs  Shorthand.hs  Simplification.hs
TestGoodCoolMath/: DerivationTests.hs  EquatingTests.hs  EvaluationTests.hs  Main.hs  OrderedMathExprOrderingTests.hs  SimplificationTests.hs  Utils.hs
